BoaUAT/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>BOM_Code_Name__c</fullName>
        <label>BOM Code Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_in__c</fullName>
        <label>B(in.)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_of_Material__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill of Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COS_GL_code_Subcode__c</fullName>
        <formula>If(   ISPICKVAL( Primary_Group__c , &quot;1110-10&quot;) ,&quot;1250-10&quot;,
If(   ISPICKVAL( Primary_Group__c , &quot;1110-11&quot;) ,&quot;1250-11&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-12&apos;) ,&quot;1250-12&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-13&apos;) ,&quot;1250-13&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-14&apos;) ,&quot;1250-14&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-20&apos;) ,&quot;1250-20&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-21&apos;) ,&quot;1250-21&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-22&apos;) ,&quot;1250-22&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-23&apos;) ,&quot;1250-23&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-25&apos;) ,&quot;1250-25&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-26&apos;) ,&quot;1250-26&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1410-00&apos;) ,&quot;1410-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1420-00&apos;) ,&quot;1420-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1241-00&apos;) ,&quot;1241-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;4758-00&apos;) ,&quot;4758-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;5460-00&apos;) ,&quot;5460-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1669-00&apos;) ,&quot;1669-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1435-00&apos;) ,&quot;1435-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;4756-00&apos;) ,&quot;4756-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1512-00&apos;) ,&quot;1512-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1861-00&apos;) ,&quot;1861-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;4695-00&apos;) ,&quot;4695-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1230-00&apos;) ,&quot;1230-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-00&apos;) ,&quot;1250-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-27&apos;) ,&quot;1250-27&quot;,&quot;&quot;)))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COS GL code &amp; Subcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carousel_qty__c</fullName>
        <label>Carousel On hand Qty</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collated_Identifier__c</fullName>
        <label>Collated Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cubic_del__c</fullName>
        <label>Cubic</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DKOL_DKOS__c</fullName>
        <label>DKOL/DKOS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_in__c</fullName>
        <label>D (in.)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dash_Size_1__c</fullName>
        <label>Dash Size 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dash_Size_2__c</fullName>
        <label>Dash Size 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dash_Size_3__c</fullName>
        <label>Dash Size 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discountable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Discountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_run_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not run Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOQ__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EOQ</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E_in__c</fullName>
        <label>E (in.)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exo_Description__c</fullName>
        <label>Exo Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Level_Description__c</fullName>
        <label>Family Level Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fluid_Spillage_cc__c</fullName>
        <label>Fluid Spillage (cc)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Coil_Size_metre__c</fullName>
        <label>Full Coil Size - metre</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1__c</fullName>
        <label>H1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H2_Nut_Size__c</fullName>
        <label>H2 (Nut Size)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H_in__c</fullName>
        <label>H (in.)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideLineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HideLineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hose_Image__c</fullName>
        <formula>IF(!ISBLANK(Stock_Image_4__c),IMAGE(Stock_Image_4__c,&quot;Stock image 1&quot;,390,690),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hose Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hose_Inner_Diameter_Inches__c</fullName>
        <label>Hose Inner Diameter Inches</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hose_Inner_Diameter_mm__c</fullName>
        <label>Hose Inner Diameter mm</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hose_Outer_Diameter_mm__c</fullName>
        <label>Hose Outer Diameter mm</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identifier_related_info_Thread_2_ID__c</fullName>
        <label>Identifier/related info/Thread 2 ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>K_DRILL_DIA_in__c</fullName>
        <label>K DRILL DIA. (in.)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LC_Length__c</fullName>
        <label>LC (Length)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Drop__c</fullName>
        <label>LD (Drop)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L_in__c</fullName>
        <label>L (in.)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Mins__c</fullName>
        <formula>(Now()-LastModifiedDate) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Units__c</fullName>
        <description>EXO to SF - STATS DATA ONLY</description>
        <label>Last Month Units</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Value__c</fullName>
        <description>EXO to SF - STATS DATA ONLY</description>
        <label>Last Month Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Year_Units__c</fullName>
        <description>EXO to SF - STATS DATA ONLY</description>
        <label>Last Year Units</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Year_Value__c</fullName>
        <description>EXO to SF - STATS DATA ONLY</description>
        <label>Last Year Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_in__c</fullName>
        <label>M (in.)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Male_Female_Flange_Fitting_Only__c</fullName>
        <label>Male/Female/Flange (Fitting Only)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Flow_L_Min__c</fullName>
        <label>Max Flow L/Min</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Work_Pressure_PSI__c</fullName>
        <label>Max Work Pressure (PSI</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Burst_Pressure_Coupled_PSI__c</fullName>
        <label>Min Burst Pressure Coupled (PSI)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Burst_Pressure_Female_PSI__c</fullName>
        <label>Min Burst Pressure Female (PSI)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Burst_Pressure_Male_PSI__c</fullName>
        <label>Min Burst Pressure Male (PSI)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Bend_Radius_mm__c</fullName>
        <label>Minimum Bend Radius mm</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Units__c</fullName>
        <description>EXO to SF - STATS DATA ONLY</description>
        <label>Month Units</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Value__c</fullName>
        <label>Month Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_in__c</fullName>
        <label>N (in.)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominal_Pipe_Size__c</fullName>
        <label>Nominal Pipe Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominal_Size_mm__c</fullName>
        <label>Nominal Size (mm)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nominal_Thread_Size_1__c</fullName>
        <label>Nominal Thread Size 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominal_Thread_Size_2__c</fullName>
        <label>Nominal Thread Size 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominal_Thread_Size_3__c</fullName>
        <label>Nominal Thread Size 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orientation__c</fullName>
        <label>Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>45 Swept</fullName>
                </value>
                <value>
                    <fullName>90 Compact</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>90 Swept</fullName>
                </value>
                <value>
                    <fullName>45 Compact</fullName>
                </value>
                <value>
                    <fullName>STRAIGHT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutputCode__c</fullName>
        <label>OutputCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output_Code__c</fullName>
        <label>Output Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Length__c</fullName>
        <label>Overall Length</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Stock_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Stock Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Physical_Thread_Size_1__c</fullName>
        <label>Physical Thread Size 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Thread_Size_3__c</fullName>
        <label>Physical Thread Size 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix_Thread_1_ID__c</fullName>
        <label>Prefix/Thread 1 ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Group__c</fullName>
        <label>Price Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Price_Group</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Mode__c</fullName>
        <description>Pricing mode for bill of materials.</description>
        <label>Pricing Mode</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Group_Display_Name__c</fullName>
        <label>Primary Group Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Group__c</fullName>
        <description>This field is equivalent to Sales GL code in EXO.</description>
        <label>Primary Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Primary_Group</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family_Display_Name__c</fullName>
        <label>Product Family Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image1__c</fullName>
        <formula>IF(!ISBLANK(Stock_Image_1__c),IMAGE(Stock_Image_1__c,&quot;Stock image 1&quot;,90,90),&quot;&quot;)</formula>
        <label>Product Image 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image_2__c</fullName>
        <formula>IF(!ISBLANK(Stock_Image_2__c),IMAGE(Stock_Image_2__c,&quot;Stock image 1&quot;,90,90),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image_3__c</fullName>
        <formula>IF(!ISBLANK(Stock_Image_3__c),IMAGE(Stock_Image_3__c,&quot;Stock image 1&quot;,90,90),&quot;&quot;)</formula>
        <label>Product Image 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image_URL__c</fullName>
        <label>Product Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Purchase_GL_code_Subcode__c</fullName>
        <formula>If(   ISPICKVAL( Primary_Group__c , &quot;1110-10&quot;) ,&quot;4745-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &quot;1110-11&quot;) ,&quot;4745-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-12&apos;) ,&quot;4745-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-13&apos;) ,&quot;4745-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-14&apos;) ,&quot;4745-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-20&apos;) ,&quot;4745-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-21&apos;) ,&quot;4745-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-22&apos;) ,&quot;4745-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-23&apos;) ,&quot;4745-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-25&apos;) ,&quot;4745-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-26&apos;) ,&quot;4745-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1410-00&apos;) ,&quot;4745-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1420-00&apos;) ,&quot;1420-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1241-00&apos;) ,&quot;1241-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;4758-00&apos;) ,&quot;4758-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;5460-00&apos;) ,&quot;5460-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1669-00&apos;) ,&quot;1669-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1435-00&apos;) ,&quot;1435-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;4756-00&apos;) ,&quot;4756-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1512-00&apos;) ,&quot;1512-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1861-00&apos;) ,&quot;1861-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;4695-00&apos;) ,&quot;4695-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1230-00&apos;) ,&quot;1230-00&quot;,
If(   ISPICKVAL( Primary_Group__c , &apos;1110-00&apos;) ,&quot;4745-00&quot;, 
If(   ISPICKVAL( Primary_Group__c , &apos;1110-27&apos;) ,&quot;4745-00&quot;,NULL)))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase GL code &amp;  Subcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_GST__c</fullName>
        <label>Purchase GST</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tax_rates</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuantityUnitOfMeasure__c</fullName>
        <label>Pack</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASSEMBLY</fullName>
                </value>
                <value>
                    <fullName>DRUM</fullName>
                </value>
                <value>
                    <fullName>EACH</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>PACK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rated_Flow_L_min__c</fullName>
        <label>Rated Flow L/min</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Group_Display_Name__c</fullName>
        <label>Secondary Group Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Group__c</fullName>
        <label>Secondary Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Primary_Group__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Secondary_Group</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serial_no_tracked__c</fullName>
        <label>Serial no. tracked</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shortened_Code__c</fullName>
        <label>Shortened Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_on_WebPortal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on WebPortal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_on_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stock_Classification__c</fullName>
        <label>Stock Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Stock_Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_Image_1__c</fullName>
        <inlineHelpText>Stores link of product image from S3 bucket.</inlineHelpText>
        <label>Stock Image 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Stock_Image_2__c</fullName>
        <description>stores image url from s3 bucket.</description>
        <label>Stock Image 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Stock_Image_3__c</fullName>
        <description>stores image url from s3 bucket.</description>
        <label>Stock Image 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Stock_Item_Url__c</fullName>
        <formula>&apos;https://silv--boasales.lightning.force.com/&apos; &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Item Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Primary_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock_Primary _Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stock Items</relationshipLabel>
        <relationshipName>Stock_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suits_Hose__c</fullName>
        <label>Suits Hose</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tail_Size_To_Suit_Hose_ID__c</fullName>
        <label>Tail Size (To Suit Hose ID)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tertiary_Group_Display_Name__c</fullName>
        <label>Tertiary Group Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tertiary_Group__c</fullName>
        <label>Tertiary Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Secondary_Group__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Tertiary_Group</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thread_3_ID_SS_adaptor__c</fullName>
        <label>Thread 3 ID/SS adaptor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thread_Color_Code__c</fullName>
        <label>Thread Color Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thread_Type_1__c</fullName>
        <label>Thread Type 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thread_Type_2__c</fullName>
        <label>Thread Type 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thread_Type_3__c</fullName>
        <label>Thread Type 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thread_Type_Filter_1__c</fullName>
        <label>Thread Type Filter 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thread_Type_Filter_2__c</fullName>
        <label>Thread Type Filter 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Stock__c</fullName>
        <description>EXO to SF - STATS DATA ONLY</description>
        <label>Total Stock</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vacuum_MH20__c</fullName>
        <label>Vacuum - MH20</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wall_Thickness__c</fullName>
        <label>Wall Thickness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Weight</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_grams_unit__c</fullName>
        <label>Weight - grams/unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WordPress_Id__c</fullName>
        <label>WordPress Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Working_Pressure_BAR__c</fullName>
        <label>Working Pressure BAR</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Working_Pressure_PSI__c</fullName>
        <label>Working Pressure PSI</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y_in__c</fullName>
        <label>Y (in.)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Units__c</fullName>
        <description>EXO to SF - STATS DATA ONLY</description>
        <label>Year Units</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Value__c</fullName>
        <description>EXO to SF - STATS DATA ONLY</description>
        <label>Year Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>barcode1__c</fullName>
        <label>Barcode 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>barcode2__c</fullName>
        <label>Barcode 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>barcode3__c</fullName>
        <label>Barcode 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Look up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRestricted_Goods__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted Goods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Hydraulic_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field identifies stock Item as a hydraulic product. This products are to be synced with web site and web portal.</description>
        <inlineHelpText>If true,this product is to be synced with web site and web portal.</inlineHelpText>
        <label>is Hydraulic Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>physical_thread_size_2__c</fullName>
        <label>physical thread size 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pop_up_alert__c</fullName>
        <label>Pop up Alert</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sales_GST__c</fullName>
        <label>Sales GST</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Assemblies_Stock_Units</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Assemblies &amp; Stock Units</label>
    </listViews>
    <listViews>
        <fullName>All_Hoses</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Group__c</field>
            <operation>equals</operation>
            <value>1110-11</value>
        </filters>
        <label>All Hoses</label>
    </listViews>
    <listViews>
        <fullName>All_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Bill_of_Material__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>